deploy/openshift/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dso-portal
spec:
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
