deploy/openshift/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: dso-portal
spec:
  to:
    kind: Service
    name: dso-portal
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
